# velaris-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NEW_ARCHITECTURE.md  README.md  decision-roi-ontology-plan.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.workbuddy/memory/: 2026-05-07.md  2026-05-08.md
_archive_ts/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
aidlc-docs/: aidlc-state.md  audit.md
config/: routing-policy.yaml
contracts/decision-contract/: input.schema.json  output.schema.json  stop-conditions.default.json  stop-conditions.schema.json
docs/: ARCHITECTURE.md  HOTEL-BIZTRAVEL-DECISION-ARCHITECTURE.md  MIGRATION.md  SELF_EVOLUTION_AND_KB_UPGRADE.md  TECHNICAL-PLAN.md  VALIDATION-CASES.md  ontology-package-plan.md  scene-output-schema-v2.md
docs/diagrams/: index.html  velaris-agent-hotel-biztravel-architecture.json
scripts/: run_lifegoal_demo.py  run_pytest.sh  skillhub_domain_smoke.py
src/openharness/: __init__.py  cli.py
tests/: conftest.py  test_asyncio_compat.py  test_hooks_skills_plugins_real.py  test_real_large_tasks.py  test_untested_features.py
tests/test_api/: test_provider.py
tests/test_biz/: test_engine.py  test_engine_hotel_biztravel.py  test_engine_operator_graph.py  test_engine_procurement.py  test_engine_stakeholder.py  test_execution_contract.py  test_failure_classifier.py  test_hotel_biztravel_inference.py  test_orchestrator.py  test_payload_redactor.py  test_persistence_barrier.py  test_velaris_agent_namespace.py
tests/test_bridge/: test_core.py  test_session_flow.py
(+370 files in other folders)
