[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velaris-agent"
version = "0.1.0"
description = "Decision Intelligence Agent - Every decision makes the next one better"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Velaris contributors" },
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "mcp>=1.0.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "watchfiles>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
velaris = "velaris_agent.cli:app"
vl = "velaris_agent.cli:app"
openharness = "openharness.cli:app"
oh = "openharness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openharness", "src/velaris_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.14",
    "ruff>=0.5.0",
]
